etc/kubernetes/manifests/santander-nginx-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: santander-nginx-deploy
spec: 
  replicas: 2
  selector:
    matchLabels: 
      app: santander-nginx-deploy
  template: 
    metadata:
      labels:
        app: santander-nginx-deploy
    spec:
      containers:
        -
          args: 
            - nginx
            - -g
            - daemon off;
          command: 
            - /docker-entrypoint.sh
          image: nginx:1.20.1-alpine@sha256:ff543a82e183fe60aaae01f648ac2c8be7513f878982050a6ae37c3f0306a0d1
          imagePullPolicy: IfNotPresent
          name: santander-nginx-deploy-container
          ports:
            - 
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            -
              mountPath: /etc/nginx/nginx.conf
              name: santander-nginx-deploy-volume-nginx
              readOnly: true
              subPath: nginx.conf
            - 
              mountPath: /etc/nginx/conf.d/default.conf
              name: santander-nginx-deploy-volume-default
              readOnly: true
              subPath: default.conf
            -
              mountPath: /var/cache/nginx
              name: santander-nginx-deploy-volume-cache
              readOnly: false
            -
              mountPath: /var/run
              name: santander-nginx-deploy-volume-run
              readOnly: false
      imagePullSecrets: []
      volumes:
        - 
          configMap:
            defaultMode: 0600
            items:
              - 
                key: nginx.conf
                mode: 0600
                path: nginx.conf
            name: santander-nginx-deploy-cm
          name: santander-nginx-deploy-volume-nginx
        -
          secret:
            defaultMode: 0600
            items:
              - 
                key: default.conf
                mode: 0600
                path: default.conf
            secretName: santander-nginx-deploy-secret
          name: santander-nginx-deploy-volume-default
        -
          emptyDir: {}
          name: santander-nginx-deploy-volume-cache
        -
          emptyDir: {}
          name: santander-nginx-deploy-volume-run
status: {}
