etc/kubernetes/manifests/santander-nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: santander-nginx-svc
spec:
  ports:
    -
      port: 80
      protocol: TCP
      targetPort: 8080
  selector: 
    app: santander-nginx-deploy
