etc/kubernetes/manifests/santander-nginx-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: santander-nginx-route
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: santander-nginx-svc
